Fix a minor code layout issue.

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -28,6 +28,11 @@
     content: '\f071';
 }
 
+/* Fix some code layout issues */
+.rst-content .highlight>pre {
+	line-height: 1.5 !important;
+}
+
 /* OneNote Online Note admonition styles */
 .rst-content .admonition-onenote-online-note {
     background-color: #975d93 !important;
